# thesis_code

./: .gitignore  .gitmodules  README.md  argparser.py  atcs2023.yml  atcs2023_nobuilds.yml  combine_activations.py  data.py  data_probing.py  extract_activations.py  extract_bies_labels.py  extract_labels.py  extract_lca_labels.py  fnwi_remote_env.yml  help.md  investigate_shared_ll.py  lm_pcfg.ipynb  main.py  parsing.ipynb  postprocess_and_eval.sh  pyproject.toml  results_bies_per_class.txt  results_chuncking_per_class.txt  shared_levels_balanced.py  test_final.pickle  treetoolbox.py  utils.py  val_final.pickle  visualize_chuncking.py  visualize_classwise.py
EVALB/: COLLINS_unlabeled.prm  evalb.c
chart-parsing/: README.md  argparser.py  data.py  inspect_results.ipynb  main.py  model.py  train.py  utils.py
comparisonALandNL/: readPTB.py
comparisonNatL/: comparison.ipynb
constprobing-paper-version/: main.md  main.py  utils.py
constprobing-repr/: argparser.py  data.py  main.py  model.py  postprocess_and_eval.sh  probing_diff_models.sh  rel_toks_check.txt  utils.py
data_generation/: combine_activations.py  extract_POS.py  extract_biesPTB.py  extract_bies_labels.py  extract_lca_labels.py  extract_pp_end_labels.py  extract_shared_levelsPTB.py  investigate_shared_ll.py  readPTB.py  shared_levels_balanced.py  treetoolbox.py
edge-probing/: README.md  argparser.py  edge_probe_local.sh  main.py  utils.py
extra4paper/: data.py  get_model_probs.py  non_terminals_0.2.txt  productions_02.txt  run.sh  test_mutations.txt  utils.py
interventions/: main.py  main.sh
jobs/: trial.job  (+3 more)
(+687 files in other folders)
