[tool.poetry]
name = "thesis"
version = "0.1.0"
description = "Package for your thesis"
authors = ["sabijn <sabijn.perdijk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
ipykernel = "^6.29.0"
torch = "^2.1.2"
pytorch-lightning = "^2.1.3"
transformers = "~4.33"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
