[tool.poetry]
name = "thesis"
version = "0.1.0"
description = "Package for your thesis"
authors = ["sabijn <sabijn.perdijk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
ipykernel = "^6.29.0"
torch = "^2.1.2"
pytorch-lightning = "^2.1.3"
transformers = "~4.33"
nltk = "^3.8.1"
spacy = "^3.7.2"
botocore = "^1.34.34"
cached-path = "^1.5.1"
lmdb = "^1.4.1"
dill = "^0.3.8"
base58 = "^2.1.1"
more-itertools = "^10.2.0"
torchvision = "^0.17.0"
h5py = "^3.10.0"
fairscale = "^0.4.13"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
